# nzep

./: CHANGELOG.md  README.md  notification_app.cpp  notifications.h
.github/: FUNDING.yml
docs/: NOTIFICATIONS_ARCHITECTURE.md  NOTIFICATIONS_DEVELOPER_MANUAL.md  NOTIFICATIONS_USER_MANUAL.md  VIM_COMMANDS_REPORT.md
include/zep/: buffer.h  editor.h  keymap.h  mode_vim.h  window.h
include/zep/ansi/: display_ansi.h
include/zep/raylib/: display_raylib.h
notification_demo/: CMakeLists.txt  CMakeLists_pzep.txt  pzep_gui.cpp  terminal_test.cpp
pzep/: README.md
pzep-tui/: CMakeLists.txt  README.md  main.cpp
pzep/pzep-gui/: README.md
pzep/pzep-tui/: README.md
src/: CMakeLists.txt  buffer.cpp  editor.cpp  git.cpp  mode_vim.cpp  tab_window.cpp  window.cpp
src/ansi/: display_ansi.cpp
src/raylib/: display_raylib.cpp
src/tests/: notifications.test.cpp
test_terminal_editor/: CMakeLists.txt  main.cpp
